# COMP_371_A3

./: CMakeLists.txt  README.md  main.cpp
Controls/: KeyboardControls.cpp  KeyboardControls.h  MouseControls.cpp  MouseControls.h
Loaders/: ObjectLoader.cpp  ObjectLoader.h  ShaderLoader.cpp  ShaderLoader.h
Shaders/: CameraVertexShader.glsl  DepthMapFragmentShader.glsl  DepthMapVertexShader.glsl  FloorFragmentShader.glsl  FloorVertexShader.glsl  FragmentShader.glsl  GouraudFragmentShader.glsl  GouraudVertexShader.glsl  HeraclesFragmentShader.glsl  HeraclesVertexShader.glsl  PhongFragmentShader.glsl  PhongVertexShader.glsl  ShadowFragmentShader.glsl  ShadowVertexShader.glsl  VertexShader.glsl
Utilities/: DepthMap.cpp  DepthMap.h  DepthMapLight.cpp  DepthMapLight.h  ErrorHandlingFunction.cpp  Light.h  MVP.cpp  MVP.h  Object.cpp  Object.h  ObjectContainer.cpp  ObjectContainer.h  Shader.cpp  Shader.h  SpotLight.cpp  SpotLight.h  Uniform.cpp  Uniform.h  Window.cpp  Window.h
Utilities/Camera/: Camera.cpp  Camera.h
Utilities/ErrorHandling/: ErrorHandlingFunctions.h
Utilities/Lights/: Light.cpp  Light.h  SpotLight.cpp  SpotLight.h
Utilities/Objects/: MVP.cpp  Object.h  ObjectContainer.cpp
Utilities/Shading/: Shader.cpp  Shader.h
Utilities/ShadowMapping/: DepthMap.cpp  DepthMap.h  DepthMapLight.cpp  DepthMapLight.h
Utilities/Window/: Window.h
